# WattBot-2025

./: .gitignore  README.md  pyproject.toml
data/: metadata.csv  test_Q.csv  train_QA.csv
src/wattbot_rag/: __init__.py  cli.py  config.py
src/wattbot_rag/evaluate/: metrics.py
src/wattbot_rag/index/: bm25.py  build_index.py  dense_faiss.py
src/wattbot_rag/ingest/: chunk_schema.py  download_pdfs.py  parse_docling_ocr.py
src/wattbot_rag/llm/: gemini_client.py  prompts.py
src/wattbot_rag/retrieve/: adaptive.py  rerank.py  rrf.py
